--- a/src/app/component/change-password/change-password.component.html
+++ b/src/app/component/change-password/change-password.component.html
@@ -1,36 +1,67 @@
 <div class="change-password-container">
   <h2>Change Password</h2>
-  <form (ngSubmit)="changePasswordForm.valid && onSubmit(changePasswordForm)" #changePasswordForm="ngForm">
+  <form
+    (ngSubmit)="changePasswordForm.valid && onSubmit(changePasswordForm)"
+    #changePasswordForm="ngForm"
+  >
     <div class="form-group">
       <label for="newPassword">New Password</label>
-      <input
-        type="password"
-        id="newPassword"
-        name="newPassword"
-        [(ngModel)]="newPassword"
-        required
-        pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$"
-      />
-      <div  class="message" *ngIf="changePasswordForm.controls['newPassword'].hasError('pattern')">
-        Password should be at least 6 characters long and contain both letters and numbers.
+      <div style="display: flex; align-items: center">
+        <input
+          type="{{ passwordVisible ? 'text' : 'password' }}"
+          id="newPassword"
+          name="newPassword"
+          [(ngModel)]="newPassword"
+          required
+          pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$"
+        />
+        <i
+          class="material-icons password-toggle-icon"
+          (click)="togglePasswordVisibility()"
+        >
+          {{ passwordVisible ? "visibility_off" : "visibility" }}
+        </i>
+      </div>
+      <div
+        class="message"
+        *ngIf="changePasswordForm.controls['newPassword'].hasError('pattern')"
+      >
+        Password should be at least 6 characters long and contain both letters
+        and numbers.
       </div>
     </div>
     <div class="form-group">
       <label for="confirmPassword">Confirm New Password</label>
-      <input
-        type="password"
-        id="confirmPassword"
-        name="confirmPassword"
-        [(ngModel)]="confirmPassword"
-        required
-        pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$"
-      />
-      <div  class="message" *ngIf="changePasswordForm.controls['confirmPassword'].hasError('pattern')">
-        Password should be at least 6 characters long and contain both letters and numbers.
+      <div style="display: flex; align-items: center">
+        <input
+          type="{{ confirmPasswordVisible ? 'text' : 'password' }}"
+          id="confirmPassword"
+          name="confirmPassword"
+          [(ngModel)]="confirmPassword"
+          required
+          pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$"
+        />
+        <i
+          class="material-icons password-toggle-icon"
+          (click)="toggleConfirmPasswordVisibility()"
+        >
+          {{ confirmPasswordVisible ? "visibility_off" : "visibility" }}
+        </i>
+      </div>
+      <div
+        class="message"
+        *ngIf="
+          changePasswordForm.controls['confirmPassword'].hasError('pattern')
+        "
+      >
+        Password should be at least 6 characters long and contain both letters
+        and numbers.
       </div>
     </div>
     <div class="form-group">
-      <button type="submit" [disabled]="!changePasswordForm.form.valid">Change Password</button>
+      <button type="submit" [disabled]="!changePasswordForm.form.valid">
+        Change Password
+      </button>
     </div>
   </form>
 </div>
