--- a/src/app/component/change-password/change-password.component.scss
+++ b/src/app/component/change-password/change-password.component.scss
@@ -29,6 +29,14 @@
     border: 1px solid #ccc;
   }
   
+  input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+  }
+  
   button {
     padding: 10px 20px;
     font-size: 16px;
