--- a/src/app/component/modal/modal.component.scss
+++ b/src/app/component/modal/modal.component.scss
@@ -32,11 +32,15 @@
 .modal-container label {
   font-weight: bold;
 }
-
+.inputFiels{
+  display: flex;
+  flex-direction: column;
+}
 .modal-container input[type="text"],
 .modal-container input[type="checkbox"] {
-  width: 100%;
+  width: 40%;
   padding: 5px;
+  margin: 10px;
   border: 1px solid gray;
   margin-bottom: 10px;
 }
