--- a/src/app/component/profile/profile.component.scss
+++ b/src/app/component/profile/profile.component.scss
@@ -63,3 +63,15 @@ input[readonly] {
   color: #888;
   cursor: not-allowed;
 }
+.profile-image {
+  width: 150px; /* Adjust the width as needed */
+  height: 150px; /* Adjust the height as needed */
+  border-radius: 50%; /* Make the image round */
+  overflow: hidden; /* Hide any overflowing content */
+}
+
+.profile-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Maintain aspect ratio and cover the container */
+}
