--- a/src/app/component/Morecomponents/card4/card4.component.scss
+++ b/src/app/component/Morecomponents/card4/card4.component.scss
@@ -29,3 +29,27 @@
 .read-more:hover {
   text-decoration: underline;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination button {
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  color: #333;
+  cursor: pointer;
+}
+
+.pagination button.active {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.pagination button:hover {
+  background-color: #007bff;
+  color: #fff;
+}
