--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -71,7 +71,7 @@
         cTextColor="primary"
         shape="rounded-1"
         size="md"
-        [src]="imageSrc"
+        [src]="imageSrc || profilePicture"
         status="success"
       >
       </c-avatar>
