--- a/src/app/component/Morecomponents/card2/card2.component.scss
+++ b/src/app/component/Morecomponents/card2/card2.component.scss
@@ -1,7 +1,9 @@
 .card-inner{
 display: flex;
 justify-content: start;
-margin: 0;
+margin-left: 10px;
+margin-right: 10px;
+
 cursor: pointer;
 }
 .card-title{
