--- a/src/app/component/Morecomponents/card3/card3.component.scss
+++ b/src/app/component/Morecomponents/card3/card3.component.scss
@@ -11,11 +11,11 @@
         align-items: center;
         justify-content: start;
     }
-    .card-title h3{
-    margin: 20;
-    }
+
     .card-content{
         padding: 5px;
-        margin-left: 15px;
+        margin-left: 25px;
+        margin-right: 25px;
+
     }
     
