--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -12,39 +12,8 @@
         size="lg"
       ></svg>
     </button>
-    <c-header-nav class="d-none d-lg-flex me-auto">
-       <c-nav-item>
-        <a cNavLink routerLink="/dashboard" routerLinkActive="active">
-          Dashboard
-        </a>
-      </c-nav-item> 
-       <c-nav-item>
-        <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>
-      </c-nav-item> 
-      <c-nav-item>
-        <a cNavLink routerLink="/settings" routerLinkActive="active">
-          Settings
-        </a>
-      </c-nav-item>
-    </c-header-nav>
+   
 
-    <c-header-nav class="d-none d-lg-flex">
-      <c-nav-item>
-        <a routerLink="./comment" cNavLink>
-          <svg cIcon name="cilBell" size="lg"></svg>
-        </a>
-      </c-nav-item>
-      <c-nav-item>
-        <a routerLink="./comment" cNavLink>
-          <svg cIcon name="cilList" size="lg"></svg>
-        </a>
-      </c-nav-item>
-      <c-nav-item>
-        <a routerLink="./comment" cNavLink>
-          <svg cIcon name="cilEnvelopeOpen" size="lg"></svg>
-        </a>
-      </c-nav-item>
-    </c-header-nav>
     <c-header-nav class="ms-3">
       <ng-container *ngTemplateOutlet="userDropdown"></ng-container>
     </c-header-nav>
@@ -68,6 +37,7 @@
       class="py-0"
     >
       <c-avatar
+      class="image"
         cTextColor="primary"
         shape="rounded-1"
         size="md"
@@ -77,11 +47,11 @@
       </c-avatar>
     </button>
     <ul cDropdownMenu class="pt-0 pr-5 w-auto">
-      <li>
+      <!-- <li>
         <h6 cDropdownHeader class="bg-light fw-semibold py-2">Account</h6>
       </li>
       <li>
-        <a routerLink="./comment" cDropdownItem>
+        <a routerLink="./profile" cDropdownItem>
           <svg cIcon class="me-2" name="cilBell"></svg>
           Updates
           <c-badge class="ms-2 float-end" color="info">
@@ -90,7 +60,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="./comment" cDropdownItem>
+        <a routerLink="./profile" cDropdownItem>
           <svg cIcon class="me-2" name="cilEnvelopeOpen"></svg>
           Messages
           <c-badge class="ms-2 float-end" color="success">
@@ -99,23 +69,23 @@
         </a>
       </li>
       <li>
-        <a routerLink="./comment" cDropdownItem>
+        <a routerLink="./profile" cDropdownItem>
           <svg cIcon class="me-2" name="cilTask"></svg>
           Tasks
           <c-badge class="ms-2 float-end" color="danger">
             42
           </c-badge>
         </a>
-      </li>
-      <li>
-        <a routerLink="./comment" cDropdownItem>
-          <svg cIcon class="me-2" name='cilCommentSquare'></svg>
-          Comments
+      </li> -->
+      <!-- <li>
+        <a routerLink="./profile" cDropdownItem>
+          <svg cIcon class="me-2" name='cilprofileSquare'></svg>
+          profiles
           <c-badge class="ms-auto" color="warning">
             42
           </c-badge>
         </a>
-      </li>
+      </li> -->
       <li>
         <h6 cDropdownHeader class="bg-light fw-semibold py-2">Settings</h6>
       </li>
@@ -127,13 +97,13 @@
         </a>
       </li>
       <li>
-        <a routerLink="./comment" cDropdownItem>
+        <a routerLink="./profile" cDropdownItem>
           <svg cIcon class="me-2" name="cilSettings"></svg>
           Settings
         </a>
       </li>
       <li>
-        <a routerLink="./comment" cDropdownItem>
+        <a routerLink="./profile" cDropdownItem>
           <svg cIcon class="me-2" name="cilCreditCard"></svg>
           Payments
           <c-badge class="ms-2 float-end" color="secondary">
@@ -141,20 +111,20 @@
           </c-badge>
         </a>
       </li>
-      <li>
-        <a routerLink="./comment" cDropdownItem>
+      <!-- <li>
+        <a routerLink="./profile" cDropdownItem>
           <svg cIcon class="me-2" name="cilFile"></svg>
           Projects
           <c-badge class="ms-2 float-end" color="primary">
             42
           </c-badge>
         </a>
-      </li>
+      </li> -->
       <li>
         <hr cDropdownDivider/>
       </li>
       <li>
-        <a routerLink="./comment" cDropdownItem (click)="logout()">
+        <a routerLink="./profile" cDropdownItem (click)="logout()">
           <svg cIcon class="me-2" name="cilLockLocked"></svg>
           Log out
         </a>
