--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -18,7 +18,7 @@
       height: 46,
       alt: 'CoreUI Logo'
     }"
-    routerLink="./comment"
+    routerLink="./profile"
   >
   </c-sidebar-brand>
   <perfect-scrollbar [config]="perfectScrollbarConfig">
