--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -24,7 +24,6 @@
       Please enter a valid name.
     </small>
   </div>
-
   <div>
     <label for="mobile">Mobile No:</label>
     <input
@@ -32,7 +31,7 @@
       id="mobile"
       name="mobile"
       [(ngModel)]="ngmobile"
-      intlTelInput
+      (input)="onMobileInputChange($event)"
     />
     <small
       class="error-message"
@@ -44,6 +43,7 @@
       Please enter a valid mobile number (10 digits only).
     </small>
   </div>
+  
 
   <div>
     <label for="gstin">GSTIN:</label>
