--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -7,47 +7,53 @@
       [cSidebarToggle]="sidebarId"
       class="ps-1"
     >
-      <svg cIcon
-        name="cilMenu"
-        size="lg"
-      ></svg>
+      <svg cIcon name="cilMenu" size="lg"></svg>
     </button>
-   
 
     <c-header-nav class="ms-3">
       <ng-container *ngTemplateOutlet="userDropdown"></ng-container>
     </c-header-nav>
-
   </c-container>
-
 
   <!-- <c-container [fluid]="true">
     <c-breadcrumb-router class="ms-2"></c-breadcrumb-router>
   </c-container>
 </ng-container> -->
-<!--</c-header>-->
+  <!--</c-header>-->
 
-<ng-template #userDropdown>
-  <c-dropdown alignment="end" variant="nav-item">
-    <button
-      cButton
-      color=""
-      [caret]="false"
-      cDropdownToggle
-      class="py-0"
-    >
-      <c-avatar
-      class="image"
-        cTextColor="primary"
-        shape="rounded-1"
-        size="md"
-        [src]="imageSrc || image"
-        status="success"
+  <ng-template #userDropdown>
+    <c-dropdown alignment="end" variant="nav-item">
+      <button
+        cButton
+        color=""
+        [caret]="false"
+        cDropdownToggle
+        class="py-0"
+        style="
+          margin: 0px;
+          padding: 0px;
+          max-height: 40px;
+          min-height: 40px;
+          max-width: 40px;
+          min-width: 40px;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        "
       >
-      </c-avatar>
-    </button>
-    <ul cDropdownMenu class="pt-0 pr-5 w-auto">
-      <!-- <li>
+        <c-avatar
+          cTextColor="primary"
+          shape="rounded-1"
+          size="md"
+          [src]="imageSrc || image"
+          status="success"
+          style="width: 200%; height: 120%"
+        >
+        </c-avatar>
+      </button>
+      <ul cDropdownMenu class="pt-0 pr-5 w-auto">
+        <!-- <li>
         <h6 cDropdownHeader class="bg-light fw-semibold py-2">Account</h6>
       </li>
       <li>
@@ -77,7 +83,7 @@
           </c-badge>
         </a>
       </li> -->
-      <!-- <li>
+        <!-- <li>
         <a routerLink="./profile" cDropdownItem>
           <svg cIcon class="me-2" name='cilprofileSquare'></svg>
           profiles
@@ -86,32 +92,30 @@
           </c-badge>
         </a>
       </li> -->
-      <li>
-        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Settings</h6>
-      </li>
-      <li></li>
-      <li>
-        <a routerLink="./profile" cDropdownItem>
-          <svg cIcon class="me-2" name="cilUser"></svg>
-          Profile
-        </a>
-      </li>
-      <li>
-        <a routerLink="./profile" cDropdownItem>
-          <svg cIcon class="me-2" name="cilSettings"></svg>
-          Settings
-        </a>
-      </li>
-      <li>
-        <a routerLink="./profile" cDropdownItem>
-          <svg cIcon class="me-2" name="cilCreditCard"></svg>
-          Payments
-          <c-badge class="ms-2 float-end" color="secondary">
-            42
-          </c-badge>
-        </a>
-      </li>
-      <!-- <li>
+        <li>
+          <h6 cDropdownHeader class="bg-light fw-semibold py-2">Settings</h6>
+        </li>
+        <li></li>
+        <li>
+          <a routerLink="./profile" cDropdownItem>
+            <svg cIcon class="me-2" name="cilUser"></svg>
+            Profile
+          </a>
+        </li>
+        <li>
+          <a routerLink="./profile" cDropdownItem>
+            <svg cIcon class="me-2" name="cilSettings"></svg>
+            Settings
+          </a>
+        </li>
+        <li>
+          <a routerLink="./profile" cDropdownItem>
+            <svg cIcon class="me-2" name="cilCreditCard"></svg>
+            Payments
+            <c-badge class="ms-2 float-end" color="secondary"> 42 </c-badge>
+          </a>
+        </li>
+        <!-- <li>
         <a routerLink="./profile" cDropdownItem>
           <svg cIcon class="me-2" name="cilFile"></svg>
           Projects
@@ -120,17 +124,17 @@
           </c-badge>
         </a>
       </li> -->
-      <li>
-        <hr cDropdownDivider/>
-      </li>
-      <li>
-        <a routerLink="./profile" cDropdownItem (click)="logout()">
-          <svg cIcon class="me-2" name="cilLockLocked"></svg>
-          Log out
-        </a>
-      </li>
-      <li></li>
-    </ul>
-  </c-dropdown>
-</ng-template>
-
+        <li>
+          <hr cDropdownDivider />
+        </li>
+        <li>
+          <a routerLink="./profile" cDropdownItem (click)="logout()">
+            <svg cIcon class="me-2" name="cilLockLocked"></svg>
+            Log out
+          </a>
+        </li>
+        <li></li>
+      </ul>
+    </c-dropdown>
+  </ng-template>
+</ng-container>
