--- a/src/app/component/modal/loader/loader.component.html
+++ b/src/app/component/modal/loader/loader.component.html
@@ -1,8 +1,5 @@
 <div class="modal-overlay">
-    <div class="modal-container">
-   <div class="loader">
-    
-   </div>
-    </div>
+  <div class="modal-container">
+    <div class="loader"></div>
   </div>
-  
+</div>
