--- a/src/app/component/Morecomponents/card3/card3.component.html
+++ b/src/app/component/Morecomponents/card3/card3.component.html
@@ -44,8 +44,8 @@
           <div class="card-content" *ngIf="item.h6">
             <h5>{{item.h6}}</h5>
           </div>
-          <div class="card-content" *ngIf="item.h7">
-            <h5>{{item.h7}}</h5>
+          <div class="card-content" *ngIf="item.h7" style="width: 100vh;">
+            <h5 style="width: 100vw;">{{item.h7.split(' ').slice(0, 10).join(' ')}}...</h5>
           </div>
           <div class="card-content" *ngIf="item.h8">
             <h5>{{item.h8}}</h5>
