--- a/src/app/component/case-laws/case-laws.component.html
+++ b/src/app/component/case-laws/case-laws.component.html
@@ -1,5 +1,13 @@
 <button class="btn btn-primary" (click)="openModal()">Add Case Laws</button>
 <div>
+  <ng-container *ngIf="isViewerOpen">
+    <app-viewer
+      (closeViewer)="closeViewer()"
+      [Docdata]="Docdata"
+    ></app-viewer>
+  </ng-container>
+</div>
+<div>
   <ng-container *ngIf="isDocDisplayOpen">
     <app-doc-display
       (closeDisplayDoc)="closeDisplayDoc()"
