--- a/src/app/component/modal/modal.component.scss
+++ b/src/app/component/modal/modal.component.scss
@@ -2,9 +2,11 @@
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7); /* Adjust the transparency here */
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 9999;
   display: flex;
   align-items: center;
@@ -13,74 +15,72 @@
 
 .modal-container {
   background-color: #ffffff;
-  padding: 20px;
+  padding: 10px;
   border-radius: 8px;
-  width: 80%;
-  height: 80%;
+  width: 90%;
+  height: 90%;
   max-width: 90%;
   max-height: 90%;
 }
-.card-container {
 
-  border: 0.2px solid black;
-  padding: 20px;
+.card-container {
+  border: 2px solid black;
+  padding: 15px;
+  height: 95%;
   border-radius: 8px;
   color: #000000;
 }
 
-/* Styles for .modal-container */
 .modal-container label {
   font-weight: bold;
+  margin: 0;
 }
-.inputFiels{
-  display: flex;
-  flex-direction: column;
-}
+
 .modal-container input[type="text"],
 .modal-container input[type="checkbox"] {
-  width: 40%;
+  width: 100%;
   padding: 5px;
-  margin: 10px;
+  margin: 10px 0;
   border: 1px solid gray;
-  margin-bottom: 10px;
+  height: 20%;
 }
 
-/* Apply box-sizing to include padding and border in the element's total width *//* Apply box-sizing to include padding and border in the element's total width */
 textarea {
-  box-sizing: border-box;
-  width: 100%; /* Adjust the width as needed */
-  height: 300px; /* Adjust the height as needed */
-  padding: 10px; /* Adjust the padding as needed */
-  border: 1px solid #ccc; /* Adjust the border style as needed */
-  font-family: Arial, sans-serif; /* Adjust the font-family as needed */
-  font-size: 14px; /* Adjust the font-size as needed */
-  line-height: 1.5; /* Adjust the line-height as needed */
-  resize: vertical; /* Allow vertical resizing of the textarea */
+  width: 100%;
+  height: 90px;
+  min-height: 40%;
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid gray;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  resize: vertical;
 }
 
-/* Apply additional styles for focus and hover effects */
 textarea:focus {
   outline: none;
-  border-color: #2196F3; /* Adjust the color as needed */
-  box-shadow: 0 0 5px rgba(33, 150, 243, 0.7); /* Adjust the shadow as needed */
+  border-color: #2196f3;
+  box-shadow: 0 0 5px rgba(33, 150, 243, 0.7);
 }
 
 textarea:hover {
-  border-color: #999; /* Adjust the color as needed */
+  border-color: #999;
 }
 
 
-
-/* Two columns layout */
-
-.modal-container .column {
-  flex-basis: 50%;
-  padding-right: 10px;
-}
 
 @media (max-width: 600px) {
+  .modal-container {
+    width: 90%;
+    height: 90%;
+  }
+
   .modal-container .column {
     flex-basis: 100%;
     padding-right: 0;
   }
+}
+.btn{
+  margin-left: 10px;
 }
