--- a/src/app/component/section/section.component.html
+++ b/src/app/component/section/section.component.html
@@ -17,6 +17,7 @@
       </app-modal>
     </ng-container>
   </div>
+
   <div>
     <ng-container *ngIf="isDocDisplayOpen">
       <app-doc-display
@@ -25,13 +26,22 @@
       ></app-doc-display>
     </ng-container>
   </div>
+
+  <div>
+    <ng-container *ngIf="isViewerOpen">
+      <app-viewer
+        (closeViewer)="closeViewer()"
+        [Docdata]="Docdata"
+      ></app-viewer>
+    </ng-container>
+  </div>
+
   <br />
   <div *ngFor="let section of ModuleInfoTable">
     <app-card
-      [ngClass]="{ disabled: section.data }"
-      (click)="section.data ? null : roteToSubSection(section)"
-      (click)="openDisplayDoc(section.data)"
-
+      [ngClass]="{ disabled: section.URL }"
+      (click)="section.URL || section.data ? null : roteToSubSection(section)"
+      (click)="openViewer(section)"
     >
       <div class="card_div">
         <div class="card_div2">
@@ -43,18 +53,12 @@
                 let i = index
               "
             >
-              <div style="display: flex;">
-                <div style="width: 10rem;">{{ cardHeadings[i] }}</div>
-                <div style="display: flex;">{{ value }}</div>
+              <div style="display: flex">
+                <div style="width: 10rem">{{ cardHeadings[i] }}</div>
+                <div style="display: flex">{{ value }}</div>
               </div>
             </ng-container>
           </h5>
-        </div>
-
-        <div
-          *ngIf="section.data"
-          class="icon-container"
-        >
         </div>
       </div>
     </app-card>
