--- a/src/app/component/forms/forms.component.html
+++ b/src/app/component/forms/forms.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary" (click)="openModal()">Add Form  </button>
+<button class="btn btn-primary" (click)="openModal()">Add Form</button>
 <div>
   <ng-container *ngIf="isDocDisplayOpen">
     <app-doc-display
@@ -8,16 +8,25 @@
   </ng-container>
 </div>
 <div>
+  <ng-container *ngIf="isViewerOpen">
+    <app-viewer (closeViewer)="closeViewer()" [Docdata]="Docdata"></app-viewer>
+  </ng-container>
+</div>
+<div>
   <ng-container *ngIf="isModalOpen">
-    <app-modal2
+    <app-modal3
       class="card-container"
       (closeModal)="closeModal()"
       (receiveData)="receiveData($event)"
       [data]="data"
     >
-    </app-modal2>
+    </app-modal3>
   </ng-container>
 </div>
 <br />
-<app-card2 [CardData]="CardData" [heading]="heading" (receiveCardData)="receiveCardData($event)">
+<app-card2
+  [CardData]="CardData"
+  [heading]="heading"
+  (receiveCardData)="receiveCardData($event)"
+>
 </app-card2>
