--- a/src/app/component/modal/modal.component.html
+++ b/src/app/component/modal/modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-overlay" *ngIf="!data.identity">
   <div class="modal-container">
-    <button type="button" class="btn-close " (click)="closeBox()"></button>
+    <button type="button" class="btn-close" (click)="closeBox()"></button>
     <div class="card-container">
       <form #act1question="ngForm" (ngSubmit)="onsubmit(act1question)">
         <h3>{{ data.Title }}</h3>
@@ -9,25 +9,30 @@
             <label for="actName">{{ data.h1 }}</label>
           </div>
 
-          <div>
-            <label *ngIf="data.h2" for="">{{ data.h2[0] }}</label>
-            <input
-              type="text"
-              [(ngModel)]="variant"
-              required
-              id="actName"
-              name="variant"
-            />
-            <label *ngIf="data.h2" for="">{{ data.h2[1] }}</label>
+          <div *ngIf="data.h2">
+            <div *ngIf="data.h2[0]">
+              <label for="">{{ data.h2[0] }}</label>
+              <input
+                type="text"
+                [(ngModel)]="variant"
+                required
+                id="actName"
+                name="variant"
+              />
+            </div>
 
-            <input
-              *ngIf="data.h2"
-              type="text"
-              [(ngModel)]="variant3"
-              required
-              id="section"
-              name="variant3"
-            />
+            <div *ngIf="data.h2[1]">
+              <label for="">{{ data.h2[1] }}</label>
+
+              <input
+                *ngIf="data.h2"
+                type="text"
+                [(ngModel)]="variant3"
+                required
+                id="section"
+                name="variant3"
+              />
+            </div>
           </div>
         </div>
         <div *ngIf="data.DataEnter">
@@ -52,17 +57,16 @@
             [disabled]="textAreaDisabled"
           />
         </div>
-        <button class="btn btn-primary" [disabled]="!variant ">Submit</button>
+        <button class="btn btn-primary" [disabled]="!variant">Submit</button>
       </form>
     </div>
     <ng-content></ng-content>
   </div>
 </div>
 
-
 <div class="modal-overlay" *ngIf="data.identity">
   <div class="modal-container">
-    <button type="button" class="btn-close " (click)="closeBox()"></button>
+    <button type="button" class="btn-close" (click)="closeBox()"></button>
     <div class="card-container">
       <form #act1question="ngForm" (ngSubmit)="onsubmit(act1question)">
         <h3>{{ data.Title }}</h3>
@@ -79,7 +83,6 @@
               required
               id="actName"
               name="variant"
-              
             />
             <label *ngIf="data.h2" for="">{{ data.h2[1] }}</label>
 
@@ -116,7 +119,12 @@
             required
           />
         </div>
-        <button class="btn btn-primary" [disabled]="!variant || !variant3 ||  !isFileSelected()">Submit</button>
+        <button
+          class="btn btn-primary"
+          [disabled]="!variant || !variant3 || !isFileSelected()"
+        >
+          Submit
+        </button>
       </form>
     </div>
     <ng-content></ng-content>
