--- a/src/app/component/council-meetings/council-meetings.component.html
+++ b/src/app/component/council-meetings/council-meetings.component.html
@@ -8,14 +8,19 @@
   </ng-container>
 </div>
 <div>
+  <ng-container *ngIf="isViewerOpen">
+    <app-viewer (closeViewer)="closeViewer()" [Docdata]="Docdata"></app-viewer>
+  </ng-container>
+</div>
+<div>
   <ng-container *ngIf="isModalOpen">
-    <app-modal2
+    <app-modal3
       class="card-container"
       (closeModal)="closeModal()"
       (receiveData)="receiveData($event)"
       [data]="data"
     >
-    </app-modal2>
+    </app-modal3>
   </ng-container>
 </div>
 <br />
