--- a/src/app/component/section/section.component.html
+++ b/src/app/component/section/section.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="headButton">
     <button type="button" class="btn btn-primary" (click)="openModal()">
-      Add Section</button
+      Add {{name}}</button
     >{{ "  " }}
     <button class="btn btn-primary" (click)="goBack()">Back</button>
   </div>
