--- a/src/app/component/sub-section/sub-section.component.html
+++ b/src/app/component/sub-section/sub-section.component.html
@@ -1,7 +1,7 @@
 <div>
   <div>
     <button type="button" class="btn btn-primary" (click)="openModal()">
-      Add Sub Section</button
+      Add {{name}}</button
     >{{ "  " }}
     <button class="btn btn-primary" (click)="goBack()">Back</button>
   </div>
